alle Aufgaben hinzugefuegt

--- a/aufgaben/aufgaben.tex
+++ b/aufgaben/aufgaben.tex
@@ -21,6 +21,7 @@
 \usepackage{paralist}
 \usepackage{makeidx}
 \usepackage{array}
+\usepackage{hyperref}
 \begin{document}
 \title{Aufgabenstellungen f"ur das Seminar\\``High Performance Computing''}
 \author{Andreas M"uller\footnote{
@@ -77,6 +78,18 @@ gegeben. Als Faustregel dient, dass Aufgabe Nummer $n$ in der Woche
 $n + 2$ behandelt wird.
 
 \newtheorem{aufgabe}{Aufgabe}
+
+\input{backprojection.tex}
+\input{des.tex}
+\input{sor.tex}
+\input{poisson.tex}
+\input{green.tex}
+\input{heat.tex}
+\input{globularcluster.tex}
+\input{openfoam.tex}
+\input{mapreduce.tex}
+\input{montecarlo.tex}
+\input{ising.tex}
 
 \section{Voraussetzungen}
 
