--- a/aufgaben/montecarlo.tex
+++ b/aufgaben/montecarlo.tex
@@ -25,9 +25,9 @@ Ein alternatives Problem, welches man mit Monte-Carlo-Simulation untersuchen
 k"onnte, handelt von der Akkumulation von Fehlern in einer Tr"agheitsplattform.
 Eine solche muss zu Beginn auserichtet werden, was nat"urlich nicht
 exakt m"oglich ist. Die Orientierung einer Tr"agheitsplattform wird gegeben
-durch eine orthogonale Matrix in $SO(3)$. 
+durch eine orthogonale Matrix in $\operatorname{SO}(3)$. 
 Die tats"achliche Orientierung einer Tr"agheitsplattform ist also eine
-Wahrscheinlichkeitsdichte auf $SO(3)$, sie ordnet jeder m"oglichen
+Wahrscheinlichkeitsdichte auf $\operatorname{SO}(3)$, sie ordnet jeder m"oglichen
 Orientierung eine gewisse Wahrscheinlichkeit zu.
 
 Im Betrieb "andert sich die Orientierung der Plattform, durch Messung
@@ -35,7 +35,7 @@ der Winkelgeschwindigkeit kann man die wahrscheinlichste Orientierung
 berechnen.
 Unvermeidliche Messfehler der drei Winkelgeschwindigkeitssensoren
 f"uhren aber dazu, dass die Ungenauigkeit immer gr"osser wird, die
-Wahrscheinlichkeitsverteilung auf $SO(3)$ wird immer ``verwaschener''.
+Wahrscheinlichkeitsverteilung auf $\operatorname{SO}(3)$ wird immer ``verwaschener''.
 Es gibt eine Vermutung, dass dies von einer Art Diffusions- oder
 W"armeleitungsgleichung beschrieben wird.
 Eine interessante Anwendung von Monte-Carlo-Simulation w"are, die
