--- a/skript/maschinen.tex
+++ b/skript/maschinen.tex
@@ -1,4 +1,4 @@
-\chapter{Maschinen}
+\chapter{Hardware\label{chapter-hardware}}
 High Performance Computing ist m"oglich dank massiver Parallelisierung.
 Dieses Kapitel beschreibt, wie HPC Cluster aussehen, und welche Konsequenzen
 sich f"ur die Programmierung ergeben.
