complete sample, add computation results

--- a/skript/sample/sample.tex
+++ b/skript/sample/sample.tex
@@ -1,6 +1,12 @@
-\chapter{Anwendung}
+\chapter{Beispiel-Anwendung}
+\rhead{Beispiel-Anwendung}
+\begin{refsection}
+
 \chapterauthor{Heiri Muster}
 \section{Einleitung}
 \section{L"osungsansatz}
 \section{Implementationseigenheiten}
 \section{Resultate}
+
+\printbibliography[heading=subbibliography]
+\end{refsection}
