--- a/skript/references.bib
+++ b/skript/references.bib
@@ -1,6 +1,13 @@
-@book{watkins,
+@book{skript:watkins,
 	author = {David S. Watkins},
 	title = {Fundamentals of Matrix Computations},
 	publisher = {Wiley},
 	year = {2010},
+}
+
+@book{skript:hagerwellein,
+	author = {Georg Hager und Gerhard Wellein},
+	title = {Introduction to High Performance Computing for Scientists and Engineers},
+	publisher = {CRC Press},
+	year = {2011},
 }
