--- a/skript/skript.tex
+++ b/skript/skript.tex
@@ -53,6 +53,7 @@
 %\usepackage{cite}
 \usepackage{standalone}
 \usepackage[sorting=none,backend=bibtex]{biblatex}
+\addbibresource{references.bib}
 \addbibresource{sample/sample.bib}
 \AtEndDocument{\clearpage\ifodd\value{page}\else\null\clearpage\fi}
 \makeindex
@@ -82,13 +83,13 @@ Leitung: Andreas M"uller\\
 \Large
 Dorian Amiet,
 Hannes Badertscher,
-Danilo Bargen,
+Danilo Bargen,\\
 Marco Bassotti,
 Reto Christen,
-Gregor Dengler,
+Gregor Dengler,\\
 Aida Hassanpour,
 Fabian Klein,
-Flavio La Morea,
+Flavio La Morea,\\
 Andreas Linggi,
 Tabea M\'endez,
 Daniel Monti,
@@ -101,7 +102,7 @@ Stefan Steiner,
 Yannick Suter,
 Dario Tr"utsch,
 Andreas Weilenmann,
-Thomas Ziegler,
+Thomas Ziegler
 \end{flushright}
 \vspace*{\stretch{2}}
 \begin{center}
