--- a/skript/algorithm.tex
+++ b/skript/algorithm.tex
@@ -8,7 +8,7 @@ ausnutzen zu k"onnen. Dieses Kapitel zeigt einige Beispiel von ungeeigneten
 Algorithmen und ihren HPC-tauglichen Gegenst"ucken.
 
 F"ur die Eigenwerte und Eigenvektoren einer $n\times n$-Matrix $A$ 
-lernt man in der linearen Algebra den folgendne Algorithmus:
+lernt man in der linearen Algebra den folgenden Algorithmus:
 \begin{enumerate}
 \item Bestimme das charakteristische Polynom
 $\chi_{A}(\lambda)=\det(A-\lambda I)$.
