--- a/skript/sprachen.tex
+++ b/skript/sprachen.tex
@@ -409,7 +409,7 @@ eine Parallelisierungsmethode zu w"ahlen, bei der die einzelnen
 Threads nicht so frei sind.
 Parallelisierung muss also mit einer wesentlich feineren Granularit"at
 stattfinden, auf der Ebene einzelner Instruktionen oder Kontrollstrukuren.
-Genau dies leistes OpenMP.
+Genau dies leistet OpenMP.
 
 OpenMP ist eine API-Spezifikation f"ur parallele Programmierung.
 Die erste Spezifikation f"ur Fortran erschien 1997, die j"ungste 
